Implemented basic login
